# telegram_type_parser

./: .gitignore  README.md  main.py  pyproject.toml
examples/: 00_simply_print.py  01_fold_into_custom_type.py
telegram_type_parser/: __init__.py  folder.py
tests/: test_composite.py  test_primitive.py  test_ref.py
